# leptos-script-test

./: Cargo.toml
app/: Cargo.toml
app/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
