[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos", default-features = false}
leptos_meta = { git = "https://github.com/leptos-rs/leptos" }
leptos_router = { git = "https://github.com/leptos-rs/leptos" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# server or client
tokio = { version = "1", optional = true}

[features]
hydrate = [ "leptos/hydrate", "leptos_router/hydrate", "leptos_meta/hydrate" ]
ssr = [ "leptos/ssr", "leptos_router/ssr",  "leptos_meta/ssr", "dep:tokio"]
