[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tower = { version = "0.4" }
tower-http = { version = "0.4", features = ["fs", "compression-full", "cors"] }
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "macros", "parking_lot"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
leptos = { git = "https://github.com/leptos-rs/leptos", default-features = false }
leptos_axum = { git = "https://github.com/leptos-rs/leptos" }
rayon = "1.5"

app = { path = "../app", features = ["ssr"] }
