[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos", default-features = false }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.5"

app = { path = "../app", features = ["hydrate"] }

[dependencies.web-sys]
version = "0.3.61"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'SvgElement',
  'Node',
  'Window',
]
